--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.16.0",
@@ -17,12 +18,14 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "date-fns": "^3.6.0",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
